--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,11 @@
 
     <div class="inner-container" id="inner-container">
       <div class="fixed-inner-top"></div>
+      <div class="fixed-bottom">
+        <svg id="waveform">
+          <polyline></polyline>
+        </svg>
+      </div>
       <div class="slant-container">
         <svg class="slant" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 10"
           height="100%" width="100%" preserveAspectRatio="none">
