white underside to waveform

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
       <div class="fixed-inner-top"></div>
       <div class="fixed-bottom">
         <svg id="waveform">
+          <polygon></polygon>
           <polyline></polyline>
         </svg>
       </div>
