--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <title>9to5</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
 </head>
 <body ontouchstart="">
   <div class="nav-container">
@@ -61,10 +62,85 @@
 
       <div class="apply-container">
         <h2>Apply to Open Call</h2>
+        <p>9to5 will feature artists and creators that use live streaming with participation from the online audience to create a collaborative outcome. We are looking for projects that want to explore new ways of using live streaming as a way to connect and collaborate with the world. From data-vis to vr, from workshops to idle games, from storytelling to interactive music, from dance to hackathons.</p>
+
+        <div class="applications">
+          <div class="applications__pair">
+            <div class="applications__box">
+              <h3>INSIDE<br />/PROJECT</h3>
+              <p>A one time or recurring project throughout the month. Live streaming vr or 360 video, a music or dance performance, a storytelling project, a panel or workshop.</p>
+              <a class="applications__box__link digital apply" href="#">apply</a>
+            </div>
+
+            <div class="applications__box">
+              <h3>INSIDE<br />/GALLERY</h3>
+              <p>We&rsquo;ll have a physical gallery at 9to5 to display works in the space.</p>
+              <a class="applications__box__link digital apply" href="#">apply</a>
+            </div>
+          </div>
+
+          <div class="applications__pair">
+            <div class="applications__box">
+              <h3>OUTSIDE<br />/PROJECT</h3>
+              <p>If the project doesn’t require to be in our space to function we can still stream your project to our audience</p>
+              <a class="applications__box__link digital apply" href="#">apply</a>
+            </div>
+
+            <div class="applications__box">
+              <h3>OUTSIDE<br />/GALLERY</h3>
+              <p>We can host your idle web-based projects on our online gallery.</p>
+              <a class="applications__box__link digital apply" href="#">apply</a>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
 
     
+  </div>
+  <div class="blanket">
+    <div class="apply-modal">
+      <h3>OPEN CALL</h3>
+
+      <a href="#" class="close-modal physical">close</a>
+
+      <div class="form-section">
+        <div class="label">Name</div>
+        <input type="text" name="name">
+      </div>
+      <div class="form-section">
+        <div class="label">Email</div>
+        <input type="email" name="email">
+      </div>
+      <div class="form-section"v>
+        <div class="label">City</div>
+        <input type="text" name="location">
+      </div>
+      <div class="form-section">
+        <div class="label">Project Title</div>
+        <input type="text" name="title">
+      </div>
+      <div class="form-section">
+        <div class="label">Project Description</div>
+        <input type="text" name="description">
+      </div>
+      <div class="form-section">
+        <div class="label">Technical Description</div>
+        <input type="text" name="technical">
+      </div>
+      <div class="form-section">
+        <div class="label">Interactive Description</div>
+        <input type="text" name="interactive">
+      </div>
+      <div class="form-section">
+        <div class="label">Describe your past works</div>
+        <input type="text" name="past">
+      </div>
+
+      <a href="#">submit</a>
+      
+    </div>
   </div>
 </body>
 </html>
