filling in content

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>9to5</title>
+  <title>9to5 : Works in Progress</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://use.typekit.net/gux4ppo.js"></script>
@@ -11,13 +11,13 @@
   <div class="nav-container">
     <div class="nav-blinder"></div>
     <div class="nav">
-      <div class="nav__top">9to5 : Works in Progress</div>
+      <div class="nav__top"><a href="#top" class="scroll black no-slash">9to5 : Works in Progress</a></div>
       <div class="nav__right"><div class="nav__right__rotate">Sep 8 &ndash; Oct 6 2017</div></div>
       <div class="nav__left" id='nav__apply'><a href="#open-call" class="scroll no-slash" style="left:32px;">APPLY TO OPEN CALL</a></div>
     </div>
   </div>
 
-  <div class="container">
+  <div class="container" id="top">
     <div class="above-fold">
       <div class="above-fold__header">
         <p><span class="n9to5">9to5</span> is a month-long digital art exhibition in Atlanta that dissolves the boundary between artist and audience by way of an experimental livestream and other emerging interfaces.</p>
@@ -45,7 +45,6 @@
     ${require('!raw-loader!./partials/opencall.html')}
     ${require('!raw-loader!./partials/tools.html')}
     ${require('!raw-loader!./partials/partners.html')}
-    ${require('!raw-loader!./partials/location.html')}
     ${require('!raw-loader!./partials/team.html')}
     ${require('!raw-loader!./partials/modal.html')}
 
