--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <div class="nav-blinder"></div>
     <div class="nav">
       <div class="nav__top"><a href="#top" class="scroll black no-slash">9to5 : Works in Progress</a></div>
-      <div class="nav__right"><div class="nav__right__rotate">Sep 8 &ndash; Oct 6 2017</div></div>
+      <div class="nav__right"><div class="nav__right__rotate"><a href="#" class="digital no-slash subscribe">STAY UP TO DATE</a></div></div>
       <div class="nav__left" id='nav__apply'><a href="#open-call" class="scroll no-slash" style="left:32px;">APPLY TO OPEN CALL</a></div>
     </div>
   </div>
@@ -47,6 +47,7 @@
     ${require('!raw-loader!./partials/partners.html')}
     ${require('!raw-loader!./partials/team.html')}
     ${require('!raw-loader!./partials/modal.html')}
+    ${require('!raw-loader!./partials/subscribe-modal.html')}
 
     <div class="fixed-bottom">
       <svg id="waveform">
@@ -55,5 +56,16 @@
       </svg>
     </div>
   </div>
+
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-101356134-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
 </body>
 </html>
