--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,11 @@
     <div class="nav-blinder"></div>
     <div class="nav">
       <div class="nav__top"><a href="#top" class="scroll black no-slash">9to5 : Works in Progress</a></div>
-      <div class="nav__right"><div class="nav__right__rotate"><a href="#" class="digital no-slash subscribe">STAY UP TO DATE</a></div></div>
-      <div class="nav__left" id='nav__apply'><a href="#open-call" class="scroll no-slash" style="left:32px;">APPLY TO OPEN CALL</a></div>
+      <div class="nav__right"><div class="nav__right__rotate">
+        <span class="fixed">Sep 8 - Oct 6 2017</span>
+        <a href="#" class="digital no-slash subscribe">STAY UP TO DATE</a>
+      </div></div>
+      <div class="nav__left" id='nav__apply'><a href="#open-call" class="scroll no-slash">APPLY TO OPEN CALL</a></div>
     </div>
   </div>
 
