--- a/src/index.html
+++ b/src/index.html
@@ -60,6 +60,7 @@
     </div>
   </div>
 
+  <script async type="text/javascript" src="bundle.js"></script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
