--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,15 @@
 <html lang="en">
 <head>
   <title>9to5 : Works in Progress</title>
-  <meta name="description" content="">
+  <meta name="description" content="9to5 is a month-long digital art exhibition in Atlanta that dissolves the boundary between artist and audience by way of an experimental livestream and other emerging interfaces.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property="og:title" content="9to5.tv : Now Taking Applications" />
+  <meta property="og:url" content="http://9to5.tv/" />
+  <meta property="og:description" content="9to5 is a month-long digital art exhibition in Atlanta that dissolves the boundary between artist and audience by way of an experimental livestream and other emerging interfaces." />
+  <meta property="og:image" content="http://9to5-assets.s3-website.us-east-2.amazonaws.com/og.png" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
   <script src="https://use.typekit.net/gux4ppo.js"></script>
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
 </head>
