adding artists section

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
       </div>
     </div>
     <div class="container" id="top">
-      ${require('!raw-loader!./partials/introduction.html')}
+      ${require('!raw-loader!./partials/artists.html')}
       ${require('!raw-loader!./partials/partners.html')}
       ${require('!raw-loader!./partials/team.html')}
       ${require('!raw-loader!./partials/modal.html')}
