switching to react

--- a/src/index.html
+++ b/src/index.html
@@ -15,39 +15,7 @@
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
 </head>
 <body ontouchstart="">
-
-
-  ${require('!raw-loader!./partials/live.html')}
-  ${require('!raw-loader!./partials/info.html')}
-
-  <div class="info-container">
-    <div class="nav-container nav-piece">
-      <div class="nav-blinder"></div>
-      <div class="nav">
-        <div class="nav__top"><a href="#top" class="scroll black no-slash">9to5 : Works in Progress</a></div>
-        <div class="nav__right"><div class="nav__right__rotate">
-          <span class="fixed">Sep 8 - Oct 6 2017</span>
-          <a href="#" class="digital no-slash subscribe">STAY UP TO DATE</a>
-        </div></div>
-        <div class="nav__left" id='nav__apply'><a class="no-slash">STAY TUNED</a></div>
-      </div>
-    </div>
-    <div class="container" id="top">
-      ${require('!raw-loader!./partials/artists.html')}
-      ${require('!raw-loader!./partials/partners.html')}
-      ${require('!raw-loader!./partials/team.html')}
-      ${require('!raw-loader!./partials/modal.html')}
-      ${require('!raw-loader!./partials/subscribe-modal.html')}
-
-      <div class="fixed-bottom nav-piece">
-        <svg id="waveform">
-          <polygon></polygon>
-          <polyline></polyline>
-        </svg>
-      </div>
-    </div>
-  </div>
-
+  <div id="app"></div>
   <script async type="text/javascript" src="bundle.js"></script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
